# readmission-risk-predictor

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: mimic_eda.ipynb
src/models/: train.py
src/pipeline/: data.py  features.py
