[project]
name = "readmission-risk-predictor"
version = "0.1.0"
description = "End-to-end ML pipeline predicting 30-day hospital readmission risk from MIMIC-IV clinical data"
requires-python = ">=3.10"

dependencies = [
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.49",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88






